<resources>
    <string name="app_name">RxJava_For_Android</string>
    <string name="btn_net_request">网络请求(rxjava+okHttp)</string>
    <string name="btn_net_request2">网络请求(rxjava+okHttp+Gson)</string>
    <string name="request_get">Get请求</string>
    <string name="request_post">Post请求</string>
    <string name="request_put">Put请求</string>
    <string name="request_delete">Delete请求</string>
    <string name="btn_not_more_click">View防止连续点击</string>
    <string name="des_demo_net">RxJava+OkHttp实现的网络请求Demo</string>
    <string name="des_demo_net2">RxJava+OkHttp+Gson实现的网络请求Demo</string>
    <string name="des_demo_not_more_click">防止连续点击多次触发View的点击事件Demo,3秒内按钮只能点击1次</string>
    <string name="click">点击</string>
    <string name="btn_checkbox_state_update">check_box状态实时跟新</string>
    <string name="open_xx_function">开启某项功能</string>
    <string name="des_demo_check1">模拟开启某项功能后在SharedPreferences中修改对应标记</string>
    <string name="des_demo_check2">同意用户协议后方可登录</string>
    <string name="login">登录</string>
    <string name="user_protocol">用户协议</string>
    <string name="btn_text_change">搜索关键字提醒</string>
    <string name="des_demo_search_key_word">模拟搜索关键字提醒功能</string>
    <string name="btn_buffer">Buffer操作符</string>
    <string name="btn_buffer_count">buffer(count)</string>
    <string name="des_demo_buffer_count">每统计到3次点击事件，发送一次数据</string>
    <string name="des_demo_buffer_count_skip">输入一个字符串，将该字符串拆分两两打包发送，并跳过第三项（例如：123456 ，最后结果为：1,2 和 4,5）</string>
    <string name="btn_buffer_count_skip">buffer(count , skip)</string>
    <string name="input_text">请输入...</string>
    <string name="btn_zip">zip数据合并操作</string>
    <string name="des_demo_zip">模拟读取本地和网络联系人列表，最终将两者进行组合</string>
    <string name="btn_concat">concat合并操作符</string>
    <string name="des_demo_merge">模拟网络请求中，1秒后先显示本地数据，3秒后显示网络数据</string>
    <string name="btn_loop">轮询器</string>
    <string name="start_loop">开启轮询</string>
    <string name="stop_loop">关闭轮询</string>
    <string name="des_demo_loop">每3秒切换一次图片</string>
    <string name="btn_timer">定时器</string>
    <string name="des_demo_timer">三秒后显示图片</string>
    <string name="btn_publish">可连接的Subject</string>
    <string name="des_demo_publish">可连接的Observable (connectable Observable)与普通的Observable差不多，不过它并不会在被订阅时开始发射数据，而是直到使用了Connect操作符时才会开始。用这种方法，你可以在任何时候让一个Observable开始发射数据。</string>
    <string name="add">添加</string>
    <string name="send_bottom">发送给底部Fragment</string>
    <string name="msg_demo_rxbus_1">这是一个通过RxJava实现的RxBus Demo\r\n上下分别为两个Fragment , TopFragment被点击 ， 会通知BottomFragment中的两个监听者，一个监听者负责每次触发显示Tap文本，另一个监听者负责每次点击缓冲1秒统计总点击数，并显示出来</string>
    <string name="btn_rxbus">rxbus</string>
    <string name="btn_reuse_subscriber">复用订阅者</string>
    <string name="Observable1">被订阅者1</string>
    <string name="Observable2">被订阅者2</string>
    <string name="des_demo_reuse">这是一个演示一个订阅者订阅多个被订阅者Demo</string>

</resources>
