<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_net"
            style="@style/style_btn"
            android:text="@string/btn_net_request" />

        <Button
            android:id="@+id/btn_not_more_click"
            style="@style/style_btn"
            android:text="@string/btn_not_more_click" />

        <Button
            android:id="@+id/btn_checkbox_state_update"
            style="@style/style_btn"
            android:text="@string/btn_checkbox_state_update" />

        <Button
            android:id="@+id/btn_text_change"
            style="@style/style_btn"
            android:text="@string/btn_text_change" />

        <Button
            android:id="@+id/btn_buffer"
            style="@style/style_btn"
            android:text="@string/btn_buffer" />

        <Button
            android:id="@+id/btn_zip"
            style="@style/style_btn"
            android:text="@string/btn_zip" />

    </LinearLayout>
</ScrollView>