<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/style_text"
            android:text="@string/des_demo_check1" />


        <CheckBox
            android:id="@+id/cb_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/open_xx_function" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/style_text"
            android:text="@string/des_demo_check2" />

        <Button
            android:textColor="@android:color/white"
            android:id="@+id/btn_login"
            style="@style/style_btn"
            android:background="@color/not_login"
            android:clickable="false"
            android:text="@string/login" />

        <CheckBox
            android:id="@+id/cb_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/user_protocol" />
    </LinearLayout>

</LinearLayout>